# openapi-k8s-discovery

./: .dockerignore  Cargo.toml  HELM.md  LICENSE  README.md  WORKSPACE.md  cog.toml  index.yaml  openapi-k8s-operator-0.1.0-pre12.tgz  openapi-k8s-operator-0.1.0-pre18.tgz  openapi-k8s-operator-0.1.0-pre19.tgz  openapi-k8s-operator-0.1.0-pre20.tgz  openapi-k8s-operator-0.1.2.tgz  openapi-k8s-operator-0.1.3-pre0.tgz  openapi-k8s-operator-0.1.3.tgz  openapi-k8s-operator-0.2.0-pre0.tgz  openapi-k8s-operator-0.2.0.tgz  openapi-k8s-operator-0.2.1-pre0.tgz  openapi-k8s-operator-0.2.1-pre1.tgz  openapi-k8s-operator-0.2.1-pre2.tgz  openapi-k8s-operator-0.2.1.tgz
.github/workflows/: ci.yml  conventional-commits.yml  docker.yml  release.yml  version-bump.yml
crates/openapi-common/: Cargo.toml
crates/openapi-common/src/: lib.rs
crates/openapi-doc-server/: Cargo.toml  Dockerfile
crates/openapi-doc-server/src/: config.rs  frontend.rs  main.rs
crates/openapi-doc-server/src/frontends/: mod.rs
crates/openapi-doc-server/src/frontends/redoc/: mod.rs
crates/openapi-doc-server/src/frontends/scalar/: mod.rs
crates/openapi-doc-server/templates/: error.html
crates/openapi-doc-server/templates/redoc/: empty.html  main.html
crates/openapi-k8s-operator/: Cargo.toml  Dockerfile
crates/openapi-k8s-operator/src/: error.rs  main.rs
docs/: RELEASE.md
examples/: simple-service.yaml  test-api.yaml
helm/openapi-k8s-operator/: Chart.yaml  README.md  values.yaml
helm/openapi-k8s-operator/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  namespace.yaml  networkpolicy.yaml  openapi-server-deployment.yaml  openapi-server-ingress.yaml  openapi-server-networkpolicy.yaml  openapi-server-service.yaml  rbac.yaml  serviceaccount.yaml  servicemonitor.yaml  statefulset.yaml
helm/openapi-k8s-operator/templates/tests/: test-connection.yaml
openapi-doc-server/src/: main.rs
test/local/: .gitignore  README.md  docker-compose.yml
test/local/config/: discovery.json
test/local/specs/: order-service.json  product-service.json  user-service.json
