[workspace]
resolver = "2"
members = [
  "crates/openapi-k8s-operator",
  "crates/openapi-doc-server",
  "crates/openapi-common",
]

[workspace.package]
version = "0.1.2"
edition = "2024"
authors = ["OpenAPI K8s Operator Contributors"]
license = "MIT"
repository = "https://github.com/your-org/openapi-k8s-operator"
description = "Kubernetes operator for discovering and centralizing OpenAPI documentation"

[workspace.dependencies]
# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"

