[package]
name = "openapi-doc-server"
version = "0.1.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenAPI documentation server with Scalar UI"

[[bin]]
name = "openapi-doc-server"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
openapi-common = { path = "../openapi-common" }

# External dependencies
axum = "0.8.6"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
scalar_api_reference = "0.1.0"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
