[package]
name = "openapi-k8s-operator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Kubernetes operator for discovering and centralizing OpenAPI documentation"

[[bin]]
name = "openapi-k8s-operator"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
openapi-common = { path = "../openapi-common" }

# External dependencies
kube = { version = "0.87", features = ["runtime", "derive"] }
kube-runtime = "0.87"
k8s-openapi = { version = "0.20", features = ["v1_28"] }
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
